Finished the DataAccess and WorkspaceConfig parts of the VSCode json schema studio system.
Signed-off-by: Jake Nijssen <jtmnijssen@outlook.com>